--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,25 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment files
+# Environment files - NEVER commit real env files
 .env
 .env.local
 .env.*.local
+.env.development
+.env.production
+.env.staging
+*.env
+
+# Keep the example file for developers
+!.env.example
+
+# Firebase service account keys (if any)
+*-firebase-adminsdk-*.json
+serviceAccountKey.json
+firebase-debug.log
+.firebase/
+
+# Backup files that might contain secrets
+*.bak
+*.backup
+*.old
